--- a/1. Fancy Buttons/index.html
+++ b/1. Fancy Buttons/index.html
@@ -35,7 +35,7 @@
 
 
   <div class="sandbox">
-    <h2>Sandbox <small>This is where you play</small></h2>
+    <h2>Sandbox <small>This was Aleksandar!</small></h2>
     <div class="content">
 
       <p><strong>Instructions:</strong> Use CSS3 to create visually attractive buttons of all different shapes, sizes
